[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cavefiller"
version = "0.3.1"
description = "A tool to find and fill protein cavities with water molecules using KVFinder and Packmol"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "CaveFiller Contributors"}
]
dependencies = [
    "typer>=0.9.0",
    "pykvfinder>=0.6.0",
    "rdkit>=2022.9.1",
    "numpy>=1.20.0",
    "biopython>=1.79",
    "tqdm>=4.67.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
cavefiller = "cavefiller.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["cavefiller*"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.ruff]
line-length = 88
target-version = "py38"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
